--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ Pillow==8.2.0
 pipenv==2021.5.29
 proglog==0.1.9
 protobuf==3.17.3
+psycopg2-binary==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
